* Also set the mbuf::m_pkthdr.len field before passing it to ether_output(). * This should help with bug #1874.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@27674 a95241bf-73f2-0310-859d-f6bbb57e9c96